# readonly-db-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/readonly_db_mcp/: config.py  formatting.py  server.py  validation.py
src/readonly_db_mcp/databases/: __init__.py  base.py  clickhouse.py  mysql.py  postgres.py  sqlite.py
tests/: test_backends.py  test_config.py  test_formatting.py  test_server.py  test_validation.py
